--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Api Searc Music </description>
 	<properties>
 		<java.version>17</java.version>
+		 <sonar.organization>gabriel422-hue</sonar.organization>
+  		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +58,7 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.13</version>
 		</dependency>
+		
 
 	</dependencies>
 
